# clean_code_in_python

./: .gitignore  README.md  Roadmap.md  pyproject.toml
code_executor/: README.md  async_executor.py  constant.py  pyexe.py  pyinit.py  pyproject.toml  sync_executor.py
doc/: poetry.md  python_beginner_guide.md
test/code_executor/: test_pyexe.py
